# roboboat_project_simulation

./: boat.blend  boat.dae
boat_data/: metadata.yaml
install/: local_setup.sh  setup.sh
install/lidar_csv_logger/lib/lidar_csv_logger/: roboboat_logger
install/lidar_csv_logger/share/lidar_csv_logger/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/lidar_csv_logger/share/lidar_csv_logger/launch/: roboboat_launch.py
install/my_lidar_processor/lib/my_lidar_processor/: pcd_publisher
install/my_lidar_processor/share/my_lidar_processor/: local_setup.sh  package.dsv  package.sh  package.xml  package.zsh
install/my_lidar_processor/share/my_lidar_processor/cmake/: my_lidar_processorConfig.cmake
install/my_velodyne_launcher/share/my_velodyne_launcher/: package.bash  package.dsv  package.sh  package.xml  package.zsh
install/my_velodyne_launcher/share/my_velodyne_launcher/launch/: vlp16_launch.py
install/navigation_pkg/lib/navigation_pkg/: navigator_node
install/navigation_pkg/share/navigation_pkg/: package.dsv  package.ps1  package.sh
install/navigation_pkg/share/navigation_pkg/launch/: navigation_launch.py
pointclouds/: ph.txt
sam-cpu-lidar-branch/roboboat-lidar/install/: local_setup.sh  setup.sh
sam-cpu-lidar-branch/roboboat-lidar/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
sam-cpu-lidar-branch/roboboat-lidar/src/my_lidar_processor/: CMakeLists.txt
sam-cpu-lidar-branch/roboboat-lidar/src/my_lidar_processor/install/: local_setup.sh  setup.sh  setup.zsh
sam-cpu-lidar-branch/roboboat-lidar/src/my_lidar_processor/install/my_lidar_processor/share/my_lidar_processor/: package.bash  package.zsh
sam-cpu-lidar-branch/roboboat-lidar/src/my_lidar_processor/launch/: start_processing_3d.launch.py
sam-cpu-lidar-branch/roboboat-lidar/src/my_lidar_processor/src/: lidar_processor_3d_node.cpp  pcd_publisher.cpp
sam-cpu-lidar-branch/roboboat-lidar/src/my_velodyne_launcher/: setup.cfg  setup.py
src/lidar_csv_logger/: control_boat.sh  package.xml  setup.cfg  setup.py
src/lidar_csv_logger/launch/: gazebo_lidar_bridge.launch.py
src/lidar_csv_logger/lidar_csv_logger/: lidar_csv_logger_node.py  roboboat_logger.py
src/lidar_csv_logger/worlds/: roboboat.sdf  roboboatEx.sdf  roboboatTest.sdf
src/navigation_pkg/: package.xml
(+3 files in other folders)
