<?xml version="1.0"?>
<package format="3">
  <name>my_lidar_processor</name>
  <version>0.0.1</version>
  <description>DONT FORGET TO WRITE DESCRIPTION</description>

  <!-- License (replace with your real license) -->
  <license>TODO:Decide On A License</license>

  <!-- Maintainer info -->
  <maintainer email="sgerken5015@floridapoly.edu">Your Name</maintainer>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime + build dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>



  <!-- Export for ament -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
